--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/content-box/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/content-box/css.tml
@@ -48,7 +48,8 @@
 	"> .content": {
 	 	background_:{
 	 		repeat: "no-repeat",
-			size: "cover"
+			size: "cover",
+			position: "center center"
 		}
 	},
 	
