--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/css.tml
@@ -84,6 +84,10 @@
 			label: {
 				"float": "none",
 				text_align: "left"
+			},
+			".child-mods": {
+				width: "100%",
+				margin_top: "<tml:option name="section-margin"/>px"
 			}
 		}
 
