00006450: Added possibility for MANAGERs to delete items

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/settings/content.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/settings/content.tml
@@ -140,7 +140,7 @@
 			</div>
 
 			<div class="tab-pane" id="items">
-				<tml:include ref="::items"/>
+				<tml:portlet name="items" ref="::items"/>
 			</div>
 			
 			<div class="tab-pane" id="validity">
