00006451: Added Child-Outline to formfield outline

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/outline-field.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/outline-field.tml
@@ -1,4 +1,6 @@
 <tml:script>
 	_type = (tmlform && tmlform.field(WGA.scoped("fieldtype"))) || CMM.setting('fieldtype');
 </tml:script>
-<tml:include ref="system:outline" o_title="[/ {WGA.alias(_type, label('form.settings.field-type.options'))}]" o_style="background:#efefef"/>
+<tml:include ref="system:outline" o_title="[/ {WGA.alias(_type, label('form.settings.field-type.options'))}]" o_style="background:#efefef">
+	<tml:include ref="system:include-child-outlines" o_title=""/>
+</tml:include>
