--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/plugin-cm-neo/setting.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/plugin-cm-neo/setting.tml
@@ -2,6 +2,7 @@
 	tmlform.removeField(WGA.scoped('image'))
 	tmlform.removeField(WGA.scoped('image_mo'))
 	tmlform.removeField(WGA.scoped('lang'))
+	tmlform.removeField(WGA.scoped('sourcedoc'))
 </tml:action>
 
 <tml:action id="clearImages">
@@ -30,6 +31,10 @@
 					_dbs.remove(meta("db", "dbkey"))
 					_dbs.add(0, meta("db", "dbkey") + " (aktuelle App)|this");
 		
+					if(!tmlform.field(WGA.scoped("dbkey"))){
+						tmlform.setField(WGA.scoped("dbkey"), "this");
+					}
+					
 					_lang = LANGUAGE;
 					var database = db()
 					if(tmlform.field(WGA.scoped("dbkey")) && tmlform.field(WGA.scoped("dbkey"))!="this")
