--- a/OpenWGA/plugins/cm-modules/design/tml/html/system/include-child-modules.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/system/include-child-modules.tml
@@ -31,7 +31,7 @@
 		<tml:option name="module-config" expression="_mod"/>
 		<tml:option name="module-style" scope="local" trim="true">
 			<tml:case islastloop="false" condition="option('margins')">
-				margin-bottom: <tml:script expression="option('section-margin')||10"/>px;				
+				margin-bottom: <tml:script expression="option('section-margin')!=null ? option('section-margin') : 10"/>px;				
 			</tml:case>
 		</tml:option>
 		<tml:option name="module-class" scope="local" trim="true">
