00006462: Added version info to app nav panel

--- a/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
@@ -79,7 +79,12 @@
 			</a>			
 			<a href="#" title="Dashboard" data-view="dashboard">
 				<i class="icon fas fa-tachometer-alt"></i>
-			</a>			
+			</a>
+			<div class="version">
+				CM-Neo
+				<br>
+				@{=WGA.design().plugin().version}
+			</div>
 		</tml:option>
 	
 		<tml:option name="appnav">
