--- a/OpenWGA/plugins/cm-neo/design/tml/html/html.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/html.tml
@@ -11,7 +11,7 @@
 		
 		<tml:htmlhead scripts="false" metaoutput="false"/>
 		
-		<script>
+		<tml:{script} encode="jsmin">
 			require.config({
 				baseUrl: "<tml:meta type="request" name="wgaurl"/>/<tml:metadata name="dbkey" type="database" context="main"/>/js",
 				paths: {
@@ -23,7 +23,7 @@
 					"select2":	["css!<tml:url type="file" doc="select2-dist:css" file="select2.min.css"/>?noext"]					
 				}
 			})
-		</script>
+		</tml:{script}>
 		
 		<link rel="stylesheet" type="text/css" href="<tml:url type="file" doc="fa6:css" file="all.min.css"/>">
 		<link rel="stylesheet" type="text/css" href="<tml:url type="file" doc="bootstrap-3.3.7-dist:css" file="bootstrap.min.css"/>"/>
