--- a/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
@@ -81,7 +81,7 @@
 				<i class="icon fas fa-tachometer-alt"></i>
 			</a>
 			<div class="version">
-				CM-Neo
+				@{=WGA.Brand.name}
 				<br>
 				@{=WGA.design().plugin().version}
 			</div>
